# UnixTaskbook

./: .gitignore  CMakeLists.txt  CNAME  Dir.html  README.md  TaskChecker  example1.sh  example2.sh  example3.sh  example4.sh  index.html  index.md  install.sh  makefile  mermaid-fragment.html  publish.sh  recomplie.sh  taskchecker  uninstall.sh
.github/: dependabot.yml
.github/workflows/: cmake.yml  dependabot-auto-merge.yml  django-check.yml  publish.yml
app/: nginx.conf  requirements.txt  uwsgi.ini
app/app/: __init__.py  admin_views.py  check.py  settings.py  urls.py  views.py
app/app/templates/public/: index.html
app/app/templates/public/check/: index.html
app/app/templates/public/docs/Dir/: index.html
app/app/templates/public/docs/Download/: index.html
app/app/templates/public/docs/File/: index.html
app/app/templates/public/docs/Shell/: index.html
app/app/templates/public/docs/Tasks/: index.html
app/app/templates/public/docs/Text/: index.html
app/app/templates/public/docs/Thread/: index.html
app/uploads/: Shell4.c
app/utb/: admin.py  apps.py  forms.py  models.py  storage.py  upload.py  urls.py  views.py
app/utb/media/download/v1.0.0/: install.sh  uninstall.sh
app/utb/media/files/: Text11.c  Thread10_59CrH28.c
app/utb/migrations/: 0001_initial.py  0002_delete_uploadfile.py  0003_initial.py
app/utb/static/utb/css/: style.css
app/utb/static/utb/js/: snippets.js  tooltips.js
app/utb/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
app/utb/templates/utb/: check.html  download.html  file_list.html  layout.html  main.html  tasks.html  upload_form.html
app/utb/templates/utb/tasks/: dir.html  file.html  shell.html  text.html  thread.html
cpp/: CMakeLists.txt  install.sh  publish.sh  uninstall.sh
cpp/inc/: cmdline.hpp  error.hpp  header.hpp  service.hpp  unixTaskbook.hpp
cpp/lib/: unixTaskbook.conf
cpp/lib/inc/: utbDir.hpp
cpp/lib/src/: utbDir.cpp  utbText.cpp  utbThread.cpp
cpp/server/: docker-compose.yml  dockerfile
cpp/server/inc/: server.h
cpp/server/src/: main.c  server.c
cpp/shared/inc/: utilities.hpp
cpp/src/: main.cpp  service.cpp  unixTaskbook.cpp
cpp/test/: File14.c  Text14.c
css/: css  style.css
docs/Dir/: Dir.html  README.md  index.html
docs/Download/: README.md  index.html
docs/File/: File.html  README.md  index.html
docs/Shell/: README.md  Shell.html  index.html
docs/Tasks/: README.md  index.html
docs/Text/: README.md  Text.html  index.html
docs/Thread/: README.md  Thread.html  index.html
inc/: cmdline.hpp  color.h  color.hpp  error.hpp  header.hpp  service.h  service.hpp  taskB.h  taskC.h  taskD.h  taskchecker.h  taskchecker.hpp  tasklib.hpp  unixTaskbook.hpp  utilities.h  utilities.hpp  variable.h
lib/: makefile  taskchecker.conf
lib/inc/: taskA.hpp  taskB.h  taskB.hpp  taskC.h  taskC.hpp  taskD.h  taskD.hpp  taskE.hpp  utbDir.hpp  utbFile.hpp  utbShell.hpp  utbText.hpp  utbThread.hpp
lib/src/: taskA.cpp  taskB.c  taskB.cpp  taskC.c  taskC.cpp  taskD.c  taskD.cpp  taskE.cpp  utbDir.cpp  utbFile.cpp  utbShell.cpp  utbText.cpp  utbThread.cpp
mermaid/: structure.mmd
sample/: example1.sh  example2.sh  example3.sh  example4.sh  example5.sh  example6.sh  exampleA.sh  exampleB.sh  exampleC.sh  exampleD.sh  example_test.sh
server/: dockerfile  makefile
server/inc/: server.h
server/repo/: D6.c
server/src/: main.c  server.c
shared/inc/: color.hpp  utilities.hpp
shared/src/: utilities.cpp
src/: error.cpp  main.c  main.cpp  service.c  service.cpp  taskB.c  taskC.c  taskD.c  taskchecker.c  taskchecker.cpp  tasklib.cpp  unixTaskbook.cpp  utilities.c  utilities.cpp  variable.c
task/Chinese/: B14.txt
task/russian/: B14.txt
test/: A9.c  C14.c  D1.c  Dir9.c  E10.c  E8.c  Text11.c  Text14_t.c  Thread10.c  Thread8.c
